[gd_scene load_steps=39 format=2]

[ext_resource path="res://Animations/Cutscene1/1/anim1.png" type="Texture" id=1]
[ext_resource path="res://Animations/Cutscene1/1/anim2.png" type="Texture" id=2]
[ext_resource path="res://Animations/Cutscene1/1/anim3.png" type="Texture" id=3]
[ext_resource path="res://Animations/Cutscene1/1/anim4.png" type="Texture" id=4]
[ext_resource path="res://Animations/Cutscene1/1/anim5.png" type="Texture" id=5]
[ext_resource path="res://Animations/Cutscene1/1/anim6.png" type="Texture" id=6]
[ext_resource path="res://Cutscens/Cutscene1.gd" type="Script" id=7]
[ext_resource path="res://Fonts/Book/Cybero50aviso/new_dynamicfont.tres" type="DynamicFont" id=8]
[ext_resource path="res://Fonts/Book/Book100/new_dynamicfont.tres" type="DynamicFont" id=9]
[ext_resource path="res://SoundEffects/Cutscene1/TOC.ogg" type="AudioStream" id=10]
[ext_resource path="res://SoundEffects/Cutscene1/naturewind.ogg" type="AudioStream" id=11]
[ext_resource path="res://SoundEffects/Cutscene1/sadmusic1.ogg" type="AudioStream" id=12]
[ext_resource path="res://Animations/cutscene2/Cutscene16.png" type="Texture" id=13]
[ext_resource path="res://Animations/cutscene2/Cutscene15.png" type="Texture" id=14]
[ext_resource path="res://Animations/cutscene2/Cutscene14.png" type="Texture" id=15]
[ext_resource path="res://Animations/cutscene2/Cutscene13.png" type="Texture" id=16]
[ext_resource path="res://Animations/cutscene2/Cutscene12.png" type="Texture" id=17]
[ext_resource path="res://Animations/cutscene2/Cutscene11.png" type="Texture" id=18]
[ext_resource path="res://Animations/cutscene2/Cutscene10.png" type="Texture" id=19]
[ext_resource path="res://Animations/cutscene2/Cutscene9.png" type="Texture" id=20]
[ext_resource path="res://Animations/cutscene2/Cutscene8.png" type="Texture" id=21]
[ext_resource path="res://Animations/cutscene2/Cutscene7.png" type="Texture" id=22]
[ext_resource path="res://Animations/cutscene2/Cutscene6.png" type="Texture" id=23]
[ext_resource path="res://Animations/cutscene2/Cutscene2.png" type="Texture" id=24]
[ext_resource path="res://Animations/cutscene2/Cutscene3.png" type="Texture" id=25]
[ext_resource path="res://Animations/cutscene2/Cutscene4.png" type="Texture" id=26]
[ext_resource path="res://Animations/cutscene2/Cutscene5.png" type="Texture" id=27]

[sub_resource type="Animation" id=1]
resource_name = "Cutscene1"
length = 9.0
tracks/0/type = "value"
tracks/0/path = NodePath("Camera2D/AnimatedSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.0745098, 0.0745098, 0.0745098, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Camera2D:zoom")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.5, 0.5 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("dialogos/ColorRect:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 5, 6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("dialogos/1:percent_visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 6, 9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("continuar:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("aviso/Label:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 5, 6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("dialogos/1:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("aviso/Label:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=2]
resource_name = "Cutscene2"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("dialogos/2:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("dialogos/1:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("continuar:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=3]
resource_name = "Cutscene3"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("dialogos/2:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("dialogos/3:percent_visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("continuar:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=4]
resource_name = "Cutscene4"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("dialogos/3:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("dialogos/ColorRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("dialogos/TOC:visible_characters")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1, 1.3, 1.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 3, 6, 9 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("dialogos/TOC:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 2.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("continuar:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/5/type = "audio"
tracks/5/path = NodePath("AudioStreamPlayer")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"clips": [ {
"end_offset": 0.98,
"start_offset": 0.0,
"stream": ExtResource( 10 )
}, {
"end_offset": 0.990112,
"start_offset": 0.0,
"stream": ExtResource( 10 )
}, {
"end_offset": 0.97,
"start_offset": 0.0,
"stream": ExtResource( 10 )
} ],
"times": PoolRealArray( 1, 1.3, 1.6 )
}

[sub_resource type="Animation" id=5]
resource_name = "Cutscene5"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("dialogos/TOC:visible_characters")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 1.3, 1.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 3, 6, 9 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("dialogos/TOC:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("continuar:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "audio"
tracks/3/path = NodePath("AudioStreamPlayer")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"clips": [ {
"end_offset": 0.98,
"start_offset": 0.0,
"stream": ExtResource( 10 )
}, {
"end_offset": 0.990112,
"start_offset": 0.0,
"stream": ExtResource( 10 )
}, {
"end_offset": 0.97,
"start_offset": 0.0,
"stream": ExtResource( 10 )
} ],
"times": PoolRealArray( 1, 1.3, 1.6 )
}

[sub_resource type="Animation" id=6]
resource_name = "Cutscene6"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath("dialogos/ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("dialogos/4:percent_visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 1.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("continuar:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=7]
resource_name = "Cutscene7"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath("dialogos/ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("dialogos/4:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 2, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("aviso/Label:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("AudioStreamPlayer2:volume_db")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 2, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -3.0, -20.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("AudioStreamPlayer3:volume_db")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 2, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -4.0, -20.0 ]
}

[sub_resource type="Animation" id=8]
resource_name = "Cutscene8"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("Camera2D/AnimatedSprite2:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Camera2D/AnimatedSprite2:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Camera2D:zoom")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1, 2.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.6, 0.6 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Camera2D:offset")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 1, 2.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -370, -210 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Camera2D/AnimatedSprite2:playing")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.1, 3.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "Cutscene1",
"speed": 3.0
} ]

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 23 ), ExtResource( 22 ), ExtResource( 21 ), ExtResource( 20 ), ExtResource( 19 ), ExtResource( 18 ), ExtResource( 17 ), ExtResource( 16 ), ExtResource( 15 ), ExtResource( 14 ), ExtResource( 13 ) ],
"loop": false,
"name": "Cutscene2",
"speed": 9.0
} ]

[sub_resource type="StyleBoxFlat" id=11]
draw_center = false

[node name="Cutscene1" type="Control"]
modulate = Color( 1, 1, 1, 0.95 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 960.0
margin_top = 540.0
margin_right = 960.0
margin_bottom = 540.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Cutscene1 = SubResource( 1 )
anims/Cutscene2 = SubResource( 2 )
anims/Cutscene3 = SubResource( 3 )
anims/Cutscene4 = SubResource( 4 )
anims/Cutscene5 = SubResource( 5 )
anims/Cutscene6 = SubResource( 6 )
anims/Cutscene7 = SubResource( 7 )
anims/Cutscene8 = SubResource( 8 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( -960, -540 )
current = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="Camera2D"]
modulate = Color( 0.0745098, 0.0745098, 0.0745098, 0 )
frames = SubResource( 9 )
animation = "Cutscene1"
frame = 1
playing = true

[node name="AnimatedSprite2" type="AnimatedSprite" parent="Camera2D"]
modulate = Color( 1, 1, 1, 0 )
frames = SubResource( 10 )
animation = "Cutscene2"

[node name="dialogos" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -1920.0
margin_top = -148.0
margin_bottom = 2.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="dialogos"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0705882, 0.0705882, 0.0705882, 0.560784 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="1" type="Label" parent="dialogos"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 9 )
text = "A vida tem sido dura nesses últimos meses..."
align = 1
valign = 1
percent_visible = 0.133333
__meta__ = {
"_edit_use_anchors_": false
}

[node name="2" type="Label" parent="dialogos"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 9 )
text = "Todo dia sinto essa vontade incontrolável de fugir da realidade..."
align = 1
valign = 1
percent_visible = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="3" type="Label" parent="dialogos"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 9 )
text = "Eu só queria não ter que pensar nos meus problemas por algumas horas..."
align = 1
valign = 1
percent_visible = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="4" type="Label" parent="dialogos"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 9 )
text = "Finalmente! Chegou minha encomenda!"
align = 1
valign = 1
percent_visible = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TOC" type="Label" parent="dialogos"]
margin_top = -628.0
margin_right = 168.0
margin_bottom = -212.0
custom_fonts/font = ExtResource( 9 )
text = "TOC
TOC
TOC"
align = 1
valign = 1
percent_visible = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="aviso" type="Control" parent="."]
margin_left = -1920.0
margin_top = -1080.0
margin_right = -16.0
margin_bottom = -148.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="aviso"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -20.0
custom_fonts/font = ExtResource( 8 )
text = "Toque na tela para continuar"
align = 2
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="continuar" type="Button" parent="."]
visible = false
margin_left = -1920.0
margin_top = -1080.0
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 11 )
custom_styles/focus = SubResource( 11 )
custom_styles/disabled = SubResource( 11 )
custom_styles/normal = SubResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -3.0

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -3.0
autoplay = true

[node name="AudioStreamPlayer3" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
volume_db = -4.0
autoplay = true
[connection signal="pressed" from="continuar" to="." method="_on_continuar_pressed"]
